examples/test/testpolicy7646.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7646
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key40: value38
      key4: value8
      key6: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value8
          key49: value15
          key16: value0
      podSelector:
        matchLabels:
          key1: value22
